--- a/src/site/src/index.css
+++ b/src/site/src/index.css
@@ -70,7 +70,8 @@ input[name='caption'] {
 }
 
 .hide,
-.hide:hover {
+.hide:hover,
+.hide:active {
   background: none;
   color: var(--nc-lk-1);
   text-decoration: underline;
@@ -87,8 +88,4 @@ input[name='caption'] {
 .react-images__view-image {
   max-width: 90vw !important;
   max-height: 90vh !important;
-}
-
-.react-images__view {
-  background: white;
 }
